@@ -1,9 +1,9 @@
 <h3>About</h3>
 <p>
   Flask-Restless is a Flask extension which provides simple generation of
-  ReSTful JSON APIs for database models defined using SQLAlchemy (or
-  Flask-SQLAlchemy). You are currently looking at the documentation of the
-  development version. Things are not stable yet, but if you have some
+  ReSTful JSON APIs for database models defined using SQLAlchemy,
+  Flask-SQLAlchemy, or Elixir. You are currently looking at the documentation
+  of the development version. Things are not stable yet, but if you have some
   feedback,
   <a href="mailto:jeffrey.finkelstein@gmail.com">let me know</a>.
 </p>
@@ -22,6 +22,7 @@
   <li><a href="http://flask.pocoo.org">The Flask website</a></li>
   <li><a href="http://sqlalchemy.org">The SQLAlchemy website</a></li>
   <li><a href="http://packages.python.org/Flask-SQLAlchemy">The Flask-SQLAlchemy website</a></li>
+  <li><a href="http://elixir.ematia.de">The Elixir website</a></li>
 </ul>
 <ul>
   <li><a href="http://pypi.python.org/pypi/Flask-Restless">Flask-Restless @ PyPI</a></li>
