@@ -5,14 +5,16 @@ Here you can see the full list of changes between each Flask-Restless release.
 
 .. note::
 
-   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
-   Flask-SQLAlchemy models. Before that, it supported only Elixir models.
+   As of version 0.6, Flask-Restless supports SQLAlchemy, Flask-SQLAlchemy, and
+   Elixir models. Flask-Restless version 0.5 supported only
+   Flask-SQLAlchemy. Before that, it supported only Elixir models.
 
 Version 0.6
 -----------
 
 Not yet released.
 
+- Added support for Elixir in addition to SQLAlchemy and Flask-SQLAlchemy.
 - Added support for pure SQLAlchemy in addition to Flask-SQLAlchemy.
 
 Version 0.5
